profile photo alignment fixed

--- a/styles/index.css
+++ b/styles/index.css
@@ -146,7 +146,6 @@ h1 {
 
 #header-content {
     flex: 1;
-    margin-right: 20px;
 }
 
 #heading h1 {
@@ -168,13 +167,14 @@ h1 {
 
 /*for title photo */
 #title-photo {
-    flex: 0 0 150px;  /* This sets a fixed width of 150px */
+    flex: 0 0 auto;
+    margin-left: 20px;
 }
 
 .title-photo {
-    width: 100%;
+    max-width: 150px;
     height: auto;
-    border-radius: 50%;  /* This will make the photo circular */
+    border-radius: 50%;
 }
 
 .resume-button {
@@ -195,7 +195,7 @@ h1 {
 }
 
 /* media queries - to help with viewing on phone */
-@media (min-width: 767px) {
+@media (min-width: 768px) {
     .project {
         flex-direction: row;
         justify-content: space-between;
@@ -215,6 +215,8 @@ h1 {
     .project-content {
         flex: 0 0 50%;
     }
+}
+@media (max-width:  767px) {
     #header {
         flex-direction: column;
         align-items: center;
